// Resik
// Author: Dedy Fajar Setyawan
// See: https://github.com/dedyf5/resik

syntax = "proto3";

package response;
option go_package = "github.com/dedyf5/resik/core/merchant/response";

message MerchantUpsert {
    uint64 ID = 1; // @gotags: json:"id" example:"123"
}
